# loan-intake-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: azure-foundry-setup.md  loan-intake-agent-plan.md  loan-intake-agent-prd.md
fixtures/1003/: clean.json  high_dti.json  high_ltv.json  missing_employment.json
fixtures/evals/: guardrail_evals.json  rag_evals.json
fixtures/guidelines/: underwriting_guidelines.md
scripts/: agent_spike.py  foundry_spike.py  grounding_spike.py  index_guidelines.py  trace_spike.py  tracing_spike.py
src/loan_intake_agent/: __init__.py  __main__.py  agent.py  chunking.py  embeddings.py  evals.py  extract.py  guardrails.py  ratios.py  run_evals.py  schema.py  search.py  trace.py  tracing.py  vector_store.py
tests/: test_agent.py  test_chunking.py  test_embeddings.py  test_evals.py  test_extract.py  test_fields.py  test_fixtures.py  test_guardrails.py  test_ratios.py  test_run_evals.py  test_search.py  test_smoke.py  test_trace.py  test_tracing.py  test_vector_store.py
